Mon Feb  2 14:42:17 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/ZIOP/ZIOP.cpp:
          Added missing include

        * tao/Transport_Cache_Manager_T.h:
          Doxygen change

Mon Feb  2 13:30:17 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/PortableServer/Root_POA.cpp (check_for_valid_wait_for_completions):
          Also check whether the poa member is not zero, when retrieving the
          orb_core we use that pointer and could crash if it is zero

        * tao/PortableServer/POA_Current_Impl.h:
          Doxygen change

Mon Feb  2 13:01:17 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * tests/Bug_3559_Regression/run_test.pl:
          Fixed error in script for WinCE. Script should be waiting for logfile
          before calling WaitKill(). Also removed debug command line parameter
          since this isn't used by the server.

Mon Feb  2 12:14:17 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/Transport_Cache_Manager_T.cpp:
          Store the transports to be purged into a set and use that set
          for the purging. This way we most oldest lru transport first, then
          work towards the more recent used transports. This fixes bugzilla
          3549

Mon Feb  2 11:48:17 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Transport_Cache_Manager/Bug_3549_Regression.cpp:
          Improved debug message

        * tests/Transport_Cache_Manager/Bug_3558_Regression.cpp:
        * tests/Transport_Cache_Manager/run_test.pl:
        * tests/Transport_Cache_Manager/TCM.mpc:
          Added regression test for bugzilla 3558

Mon Feb  2 11:18:17 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/Transport_Cache_Manager.h:
        * tao/Transport_Cache_Manager_T.cpp:
        * tao/Transport_Cache_Manager_T.h:
        * tao/Transport_Cache_Manager_T.inl:
          The purging strategy is now also a template argument
